--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,40 +1,79 @@
-.container{
+.container {
     float: left;
 }
-.main{
+
+.main {
     text-align: justify;
 }
-#firstpara{
+
+#firstpara {
     font-size: 20px;
     color: aquamarine;
 }
-#secondpara{
+
+#secondpara {
     color: rgba(255, 255, 255, 0.73);
     font-size: 80px;
     font-weight: 650;
 }
-#thirdpara{
+
+#thirdpara {
     color: rgba(128, 128, 128, 0.842);
     font-size: 70px;
-    font-weight:650;
+    font-weight: 650;
 }
+
 #forthpara {
     padding-top: 2%;
     font-size: larger;
-    width: 60%; 
+    width: 60%;
 }
-#childforth{
+
+#childforth {
     display: inline;
     color: aquamarine;
 }
-#homebtn{
-    background-color: transparent;
+
+.homebtn {
+    height: 20%;
+    width: 20%;
+    position: relative;
+    display: flex;
+    margin-top: 2%;
+}
+
+#homebtn {
+    background-color: #1f2833;
     border-radius: 5px;
     border-color: aquamarine;
     color: aquamarine;
     font-size: larger;
     margin-top: 2%;
-    width: 20%;
-    height: 20%;
+    width: 100%;
+    height: 100%;
     cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+#homespan {
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    z-index: -1;
+    background-color: rgb(127, 255, 212);
+    border-radius: 5px;
+    border-color: aquamarine;
+    color: aquamarine;
+    font-size: larger;
+    margin-top: 2%;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    transition: 0.3s ease-out;
+}
+#homebtn:hover {
+    transform: scale(1.0) translateX(-5px);
+}
+.homebtn:hover #homespan {
+    transform: scale(1.0) translateY(3px);
+    margin-top: 7px;
 }
