--- a/src/components/hireme/hireme.css
+++ b/src/components/hireme/hireme.css
@@ -30,29 +30,38 @@ form {
 }
 
 label {
+    transform: scale(0.9) translateX(5px);
+    margin-top: -0.8%;
     position: absolute;
-    background-color: black;
+    background-color:  #1f2833;
+    border-radius: 2%;
+    border-color: aquamarine;
 }
 
 input {
-    height: 6%;
-    margin: 1.5%;
+    height: 9%;
+    width: 80%;
+    margin-bottom: 5%;
     background-color: transparent;
     border-radius: 6px;
-    border-color: aliceblue;
-    color: rgb(122, 156, 185);
+    border-color: aquamarine;
+    color:orange;
+    font-size: large;
 }
+
 
 textarea {
     margin: 1%;
     background-color: transparent;
-    color: rgb(122, 156, 185);
+    color: orange;
     width: 80%;
     height: 40%;
     resize: none;
-    border-radius: 4px;
-    border-color: aliceblue;
+    border-radius: 8px ;
+    border-color:  aquamarine;
+    font-size: larger;
 }
+
 
 #submit {
     margin: 1%;
@@ -64,4 +73,7 @@ textarea {
     border-color: aquamarine;
     border-radius: 4px;
     cursor: pointer;
+}
+#submit:hover{
+    transform: scale(1.1) translateX(2px);
 }
