--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
-  margin: 0 4% 0 0;
   height: 100vh;
   width: 100%;
+  position: relative;
 }
 ::-webkit-scrollbar {
   width: 0.4rem; 
