--- a/src/components/Aboutme/Aboutme.css
+++ b/src/components/Aboutme/Aboutme.css
@@ -38,14 +38,14 @@ h1 {
   border-bottom: 1px solid aquamarine;
 }
 
-ul {
+.listabout {
   list-style: none;
   padding-left: 20px;
   font-size: larger;
   color: rgb(182, 179, 179);
 }
 
-li::before {
+.listabout li::before {
   content: "▶";
   display: inline-block;
   margin-right: 2%;
