--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,9 +1,13 @@
-.container {
+.containerhome {
     float: left;
+    height: 100%;
+    margin: 2%;
+    margin-left: 15%;
 }
 
 .main {
     text-align: justify;
+    height: 100%;
 }
 
 #firstpara {
@@ -35,8 +39,8 @@
 }
 
 .homebtn {
-    height: 20%;
-    width: 20%;
+    height: 15%;
+    width: 22%;
     position: relative;
     display: flex;
     margin-top: 2%;
@@ -53,6 +57,7 @@
     height: 100%;
     cursor: pointer;
     transition: 0.2s ease-in-out;
+    position: relative;
 }
 
 #homespan {
