--- a/src/components/social-sites/Socialsites.css
+++ b/src/components/social-sites/Socialsites.css
@@ -1,35 +1,29 @@
-.socialcontainer {
-  margin-left: 2%;
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100vh;
-}
-
-.socialcontainer img {
-  margin: 1%;
-  cursor: pointer;
-}
-
-
 .vertical-line {
   width: 2px;
-  background-color: grey; 
-  height: 38%;
-  position: absolute;
-  left: 50%; 
+  background-color: grey;
+  height: 60%;
+  position: fixed;
+  left: 5%;
   top: 0;
-  bottom: 0;
-  transform: translateX(-50%); 
+  transform: translateX(-50%);
+  writing-mode: vertical-lr;
+  display: flex;
+}
+
+.socaildiv1 {
+  width: 100%;
+  height: 100%;
+  margin-top: 240px;
+  margin-left: -6%;
+
 }
 
 .socialdiv2 {
-writing-mode: vertical-lr; 
-position: fixed;
-color: aquamarine;
-margin-left: 94.5%;
-top: 44%;
+  writing-mode: vertical-lr;
+  position: fixed;
+  color: aquamarine;
+  margin-left: 94.5%;
+  top: 44%;
 
 }
 
@@ -37,22 +31,20 @@ top: 44%;
 .vertical-line2 {
   display: flex;
   width: 2px;
-  background-color:gray; 
-  height: 30%; 
+  background-color: gray;
+  height: 30%;
   position: fixed;
-  left: 95%; 
-  bottom: 0; 
-  transform: translateX(-50%); 
+  left: 95%;
+  bottom: 0;
+  transform: translateX(-50%);
 }
+
 .social-link {
-  margin: 2px;
-  background-color: rgba(128, 128, 128, 0.532);
-  border-radius: 60%;
-  transition: 0.9s ease-in-out;
+  margin: 3%;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background-color: #1f2833;
+  transform: translateX(100%);
 }
-
-.social-link:hover {
-  background-color: aquamarine; 
-}
-
 
