--- a/src/components/social-sites/Socialsites.css
+++ b/src/components/social-sites/Socialsites.css
@@ -1,7 +1,7 @@
 .vertical-line {
   width: 2px;
   background-color: grey;
-  height: 60%;
+  height: 59%;
   position: fixed;
   left: 5%;
   top: 0;
@@ -13,7 +13,7 @@
 .socaildiv1 {
   width: 100%;
   height: 100%;
-  margin-top: 240px;
+  margin-top: 300px;
   margin-left: -6%;
 
 }
@@ -47,4 +47,12 @@
   background-color: #1f2833;
   transform: translateX(100%);
 }
+
+.social-link img {
+  filter:invert(60%)
+}
+
+
+
+
 
